# RTin1Weekend

./: .gitignore  CMakeLists.txt  TODO.md
.github/workflows/: cmake-multi-platform.yml
RT1Weekend/: CMakeLists.txt  color.h  hittable.h  hittable_list.h  main.cpp  main.h  ray.h  rtweekend.h  sphere.h  vec3.h
